--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
 <br>
-<a href="./public/about.html">about me</a>
+<a href="./my resume/index.html">about me</a>
 <a href="./public/contact.html">contact me</a>
